# ArtLangVocalSynth

./: .gitignore  README.md  pyproject.toml
src/: ArtLangVocalSynth.lnk
src/analysis/: src.lnk
src/analysis/exp01_pitch_mora_count_analysis/: pitch_mora_count_analysis.py
src/analysis/exp01_pitch_mora_count_analysis/data/: all_mora_analysis.csv  exp01_all_songs_row.csv  invalid_mora.csv  normalized_lyrics.csv
src/analysis/exp01_pitch_mora_count_analysis/data/01exp_csv/: all_mora_analysis.csv  normalized_lyrics.csv
src/analysis/exp02_duration_mora_analysis/: duration_mora_analysis.py
src/analysis/exp02_duration_mora_analysis/data/: all_mora_analysis.csv  exp02_Long.csv  exp02_Short.csv  exp02_SuperLong.csv  exp02_all_songs_row.csv  invalid_mora.csv  normalized_lyrics.csv
src/analysis/exp02_pitch_mora_duration_analysis/: pitch_mora_dur_analysis.py
src/analysis/exp03_interval_pitch_mora_analysis/: __init__.py  interval_pitch_mora_analysis.py
src/analysis/exp03_interval_pitch_mora_analysis/data/: all_mora_analysis.csv  exp03_all_songs_row.csv  invalid_mora.csv  normalized_lyrics.csv
src/synthesis/: Generate_fromPROB.ipynb  Generate_fromProb.py  N-gram分析.ipynb  convertMusicxml.py  musicxml_visualization.html  visualize_xml.py
src/synthesis/histgram/: bigram_hist.txt  monogram_hist.txt  random_hist.txt  trigram_hist.txt
src/synthesis/probability/: bigram_prob.txt  monogram_prob.txt  random_prob.txt  trigram_prob.txt
src/utils/: __init__.py  constants.py  exp01_plot.py  exp02_plot.py  exp03_plot.py  mora_analyzer.py  musicxml_analyzer.py
(+18 files in other folders)
